fix(pet): use ZoneOffset.UTC for pet create and update weight recording