@@ -45,7 +45,7 @@ public class PetService {
         pet.setUniqueCode(generateUniqueCode());
         Pet savedPet = petRepository.save(pet);
         if (savedPet.getWeight() != null) {
-            recordWeight(savedPet.getId(), savedPet.getWeight(), LocalDate.now(), savedPet.getOwnerId());
+            recordWeight(savedPet.getId(), savedPet.getWeight(), LocalDate.now(ZoneOffset.UTC), savedPet.getOwnerId());
         }
         return savedPet;
     }
@@ -83,15 +83,19 @@ public class PetService {
 
         List<UUID> visitIds = visits.stream().map(Visit::getId).toList();
         List<TreatmentEntry> treatments = visitIds.isEmpty()
-                ? List.of()
+                ? Collections.emptyList()
                 : treatmentEntryRepository.findByVisitIdInOrderByCreatedAtDesc(visitIds);
 
         List<Recommendation> recommendations = visitIds.isEmpty()
-                ? List.of()
+                ? Collections.emptyList()
                 : recommendationRepository.findByVisitIdInOrderByCreatedAtDesc(visitIds);
 
-        return PetHealthHistoryResponse.from(
-                pet, weightHistory, visits, treatments, recommendations
+        return new PetHealthHistoryResponse(
+                pet,
+                weightHistory,
+                visits,
+                treatments,
+                recommendations
         );
     }
 
@@ -112,7 +116,7 @@ public class PetService {
         if (request.getEstimatedBirthYear() != null) existingPet.setEstimatedBirthYear(request.getEstimatedBirthYear());
         if (request.getWeight() != null) {
             existingPet.setWeight(request.getWeight());
-            recordWeight(existingPet.getId(), request.getWeight(), LocalDate.now(), existingPet.getOwnerId());
+            recordWeight(existingPet.getId(), request.getWeight(), LocalDate.now(ZoneOffset.UTC), existingPet.getOwnerId());
         }
         if (request.getMicrochipNo() != null) existingPet.setMicrochipNo(request.getMicrochipNo());
         if (request.getIsSpayedOrNeutered() != null) existingPet.setIsSpayedOrNeutered(request.getIsSpayedOrNeutered());
